fix some z-index issues

--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -52,6 +52,7 @@ body, html {
       top:30px;
       box-shadow: -5px 5px 5px #666;
       display:none;
+      z-index:120;
       a {
         font-size:14pt;
         display:block;
@@ -118,7 +119,12 @@ body, html {
       label, select, .autocomplete_wrap {
         margin-left:5pt;
         margin-right:5pt;
+      }
+      label, select {
         z-index:110;
+      }
+      .autocomplete_wrap {
+        z-index:500;
       }
       select:not([multiple]) {
         max-width:150px;
